# Coffeerobot

./: README.md
robotino_default_pkgs/: Coffeebot.sh  Coffeebot_sim.sh
robotino_default_pkgs/src/ros/robotino_description/: robotino.urdf
robotino_default_pkgs/src/ros/robotino_description/launch/: spawn.launch
robotino_default_pkgs/src/ros/robotino_description/maps/: c1.11.yaml  spawn_digiFab.launch.xml
robotino_default_pkgs/src/ros/robotino_description/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_explore.yaml  move_base_params.yaml
robotino_default_pkgs/src/ros/robotino_description/param/rviz/: robotino.rviz
robotino_default_pkgs/src/ros/robotino_description/rosbag/: laserscan_roomname.bag  roomname_map.yaml
robotino_default_pkgs/src/ros/robotino_description/sdf_Files/: digiFab.stl  model.config  model.sdf
robotino_default_pkgs/src/ros/robotino_description/urdf/: robotino.urdf  robotino.urdf.xacro  robotino_body.urdf.xacro  robotino_parts.urdf.xacro
robotino_default_pkgs/src/ros/robotino_gui/: CMakeLists.txt  CMakeLists.txt.user.adae1b7  package.xml  resource.qrc
robotino_default_pkgs/src/ros/robotino_gui/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sidebar.cpp  sidebar.h
robotino_default_pkgs/src/ros/robotino_gui/src/Help_Window/: help_window.cpp  help_window.h  help_window.ui
robotino_default_pkgs/src/ros/robotino_gui/src/Manual_Window/: manual_window.cpp  manual_window.h  manual_window.ui
robotino_default_pkgs/src/ros/robotino_gui/src/ROS_src/: _ros.cpp  _ros.h
robotino_default_pkgs/src/ros/robotino_gui/src/Teleop_Window/: teleop_window.cpp  teleop_window.h  teleop_window.ui
robotino_default_pkgs/src/ros/robotino_node/: CMakeLists.txt
robotino_default_pkgs/src/ros/robotino_node/include/: AnalogInputArrayROS.h  DigitalInputArrayROS.h  DigitalOutputArrayROS.h  EncoderInputROS.h  MotorArrayROS.h  OdometryROS.h  PowerManagementROS.h  ResetOdometry.h  SetEncoderPosition.h  SetGripperState.h
robotino_default_pkgs/src/ros/robotino_node/launch/: coffeerobot.launch  explore.launch  explore_lap.launch  robotino_explore.launch  robotino_node.launch  robotino_sim_gui.launch
robotino_default_pkgs/src/ros/robotino_node/position/: position.csv
robotino_default_pkgs/src/ros/robotino_node/src/: fill_csv.cpp  goal_csv.cpp  simple_navigation_goals.cpp  simplegoal.cpp
robotino_default_pkgs/src/ros/robotino_simulation/maps/: digiFabMap.yaml
